[package]
name = "rust-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rand = "0.3" 基于 Rust 官方仓库 crates.io，通过版本说明来描述
# hammer = { version = "0.5.0"} 基于 Rust 官方仓库 crates.io，通过版本说明来描述
# color = { git = "https://github.com/bjz/color-rs" } 基于项目源代码的 git 仓库地址，通过 URL 来描述
# geometry = { path = "crates/geometry" } 基于本地项目的绝对路径或者相对路径，通过类 Unix 模式的路径来描述
num = "0.4.1"